--- a/coin-flips.ipynb
+++ b/coin-flips.ipynb
@@ -28,68 +28,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def flip_it():\n",
-    "    return random.randint(1, 2)\n",
-    "\n",
-    "def is_power2(num):\n",
-    "\n",
-    "    return num != 0 and ((num & (num - 1)) == 0)"
+    "    return random.randint(0, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def flippin_off(n=2**16):\n",
-    "    heads = 0\n",
-    "    tails = 0\n",
-    "    count = 0\n",
+    "def flippin_off(number_of_flips=16):\n",
     "    results_list = []\n",
-    "    expo = math.sqrt(n)\n",
-    "    print(math.sqrt(expo))\n",
-    "    while count <= n:\n",
-    "        if is_power2(count):\n",
-    "            results_list.append((heads, tails))\n",
-    "        if flip_it() == 1:\n",
-    "            heads += 1\n",
-    "        else:\n",
-    "            tails += 1\n",
-    "        count += 1\n",
-    "    return (results_list)"
+    "    for n in range(number_of_flips + 1):\n",
+    "        heads = 0\n",
+    "        tails = 0\n",
+    "        for _ in range(2 ** n):\n",
+    "            if flip_it():\n",
+    "                heads += 1\n",
+    "            else:\n",
+    "                tails += 1\n",
+    "        results_list.append((heads, tails))\n",
+    "    return results_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results_list = flippin_off()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -98,12 +82,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 0), (2, 0), (4, 0), (7, 1), (13, 3), (23, 9), (38, 26), (66, 62), (119, 137), (246, 266), (491, 533), (980, 1068), (2006, 2090), (4090, 4102), (8147, 8237), (16225, 16543), (32443, 33093)]\n"
+      "[(0, 1), (0, 2), (1, 3), (3, 5), (9, 7), (15, 17), (27, 37), (69, 59), (124, 132), (264, 248), (506, 518), (993, 1055), (1976, 2120), (4061, 4131), (8140, 8244), (16420, 16348), (32874, 32662)]\n"
      ]
     }
    ],
    "source": [
-    "print(results_list)  "
+    "print(results_list)"
    ]
   },
   {
@@ -221,7 +205,8 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -236,16 +221,7 @@
      ]
     }
    ],
-   "source": [
-    "plt.hist(nums)\n",
-    "mean = statistics.mean(nums)\n",
-    "stdev = statistics.stdev(nums)\n",
-    "ymin, ymax = plt.ylim()\n",
-    "\n",
-    "plt.vlines(mean, ymin, ymax, color='red')\n",
-    "plt.vlines([mean - 2 * stdev, mean - stdev, mean + stdev, mean + 2 * stdev], ymin, ymax, color='red', linestyles='dashed')\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
